<resources>
    <string name="orderCenter">订单中心</string>
    <string name="cashierDesk">收银台</string>
    <string name="zfb">支付宝付款</string>
    <string name="yuan">元</string>
    <string name="main">首页</string>
    <string name="type">分类</string>
    <string name="discover">发现</string>
    <string name="shoppingTrolley">购物车</string>
    <string name="personalCenter">个人中心</string>
    <string name="myOrder">我的订单</string>
    <string name="allOrders">查看全部订单</string>
    <string name="obligation">待付款</string>
    <string name="orderPendingPayment">待付款</string>
    <string name="sendObligation">待发货</string>
    <string name="receiving">待收货</string>
    <string name="completed">已完成</string>
    <string name="iscompleted">完成</string>
    <string name="afterSale">售后/退款</string>
    <string name="shippingAddress">收货地址</string>
    <string name="myFavorite">我的收藏</string>
    <string name="coupon">我的优惠券</string>
    <string name="melonSeeds">我的瓜子</string>
    <string name="prize">我的奖品</string>
    <string name="E_ticket">我的电子票</string>
    <string name="share">邀请分享</string>
    <string name="callCenter">客服中心</string>
    <string name="serviceFeedback">服务反馈</string>
    <string name="compile">编辑</string>
    <string name="checkAll">全选</string>
    <string name="total">合计：</string>
    <string name="account">结算</string>
    <string name="quickShoppingToday">今日闪购距·结束</string>
    <string name="viewMore">查看更多</string>
    <string name="newProducts">新品推荐</string>
    <string name="excellent">这里都是买的棒棒哒</string>
    <string name="particulars">商品详情</string>
    <string name="AddToCart">加入购物车</string>
    <string name="contact">联系客服</string>
    <string name="collect">收藏</string>
    <string name="graphicDetails">图文详情</string>
    <string name="label">标签</string>
    <string name="smallSkirt">小裙子</string>
    <string name="jacket">上衣</string>
    <string name="pants">下装</string>
    <string name="coat">外套</string>
    <string name="parts">配件</string>
    <string name="handbag">包包</string>
    <string name="dressUp">装扮</string>
    <string name="theHouseIsTasted">居家宅品</string>
    <string name="stationery">办公文具</string>
    <string name="peripheral">数码周边</string>
    <string name="game">游戏专区</string>
    <string name="hotSale">热卖推荐</string>
    <string name="use">常用分类</string>

    <string name="share2">分享</string>
    <string name="search">搜索</string>
    <string name="style">款式</string>
    <string name="quantity">数量</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="noShop">购物车还没有数据,去逛逛吧...</string>
    <string name="alreadyTheSmallest">已经是最小了</string>
    <string name="pleaseChooseOneFirst">请先选择一个</string>
    <string name="understock">库存不足</string>
    <string name="placeAnOrderSuccessfully">下单成功</string>
    <string name="theOrderDetails">订单详情</string>
    <string name="noAddressPhone">没有地址和电话是否现在去设置</string>
    <string name="hint">提示</string>
    <string name="userName">用户名：</string>
    <string name="phone">电话：</string>
    <string name="address">地址：</string>
    <string name="count">数量:</string>
    <string name="submitOrder">提交订单</string>
    <string name="areYouSureYouWantToContinuePaying">确定要继续付款吗</string>
    <string name="paySuccess">支付成功</string>
    <string name="inTheConfirmation">支付结果确认中</string>
    <string name="cancelThePayment">取消支付</string>
    <string name="paymentFailed">支付失败</string>

</resources>