<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.framework.view.ToolBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:id="@+id/toolbar"
        app:wp_CenterTitle="@string/shoppingTrolley"
        app:wp_RightTitle="@string/compile"></com.example.framework.view.ToolBar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_height="match_parent"
        android:id="@+id/shoppingTrolley_rv"></androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="@dimen/dp_80">

        <CheckBox
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_centerVertical="true"
            android:button="@null"
            android:id="@+id/checkAll"
            android:background="@drawable/checkbox_unselected"></CheckBox>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_60"
            android:text="@string/checkAll"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginLeft="@dimen/dp_120"
            android:layout_centerVertical="true"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/black"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_17"
            android:textColor="@color/red"
            android:text="￥0.0"
            android:id="@+id/price"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_180"></TextView>

        <TextView
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_60"
            android:gravity="center"
            android:textSize="@dimen/dp_17"
            android:background="@drawable/button_false"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:id="@+id/accout"
            android:text="@string/account"></TextView>

    </RelativeLayout>

</RelativeLayout>