<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".person.PersonFragment">

    <com.example.view.ToolBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:id="@+id/toolbar"
        android:visibility="gone"></com.example.view.ToolBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_180">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/new_user_icon_background"></ImageView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/new_user_setting"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_20"></ImageView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_20"
                    android:src="@drawable/new_message_icon"></ImageView>

                <ImageView
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginLeft="@dimen/dp_120"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/new_user_icon"></ImageView>

                <TextView
                    android:id="@+id/please_login"
                    android:textSize="@dimen/dp_20"
                    android:textColor="@color/red"
                    android:layout_marginTop="@dimen/dp_150"
                    android:layout_marginLeft="@dimen/dp_160"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="请登录"></TextView>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myOrder"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/dp_10"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allOrders"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_25"
                    android:layout_marginLeft="@dimen/dp_10"></TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:src="@drawable/home_arrow_right"></ImageView>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_height="@dimen/dp_80">

                <LinearLayout
                    android:id="@+id/order_payment"
                    android:layout_width="@dimen/dp_0"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/aaa"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/obligation"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/order_shipment"
                    android:layout_width="@dimen/dp_0"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/new_order_status_fahuo"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/sendObligation"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/bbb"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/receiving"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="@dimen/dp_40"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_10"
                        android:src="@drawable/ccc"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/completed"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:src="@drawable/ddd"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/afterSale"></TextView>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="@dimen/dp_10"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/user_channel_icon_address"
                    android:text="@string/shippingAddress"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/user_channel_icon_collect"
                    android:text="@string/myFavorite"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/user_channel_icon_coupon"
                    android:text="@string/coupon"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/user_channel_icon_score"
                    android:text="@string/melonSeeds"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/user_channel_icon_prize"
                    android:text="@string/prize"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/user_icon_ticket"
                    android:text="@string/E_ticket"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:background="@color/gray"></View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/user_channel_icon_invitation"
                    android:text="@string/share"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/user_channel_icon_callcenter"
                    android:text="@string/callCenter"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/user_channel_icon_feedback"
                    android:text="@string/serviceFeedback"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:background="@color/gray"></View>

        </LinearLayout>

    </ScrollView>

</FrameLayout>