<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:id="@+id/pop_img"
            android:src="@mipmap/ic_launcher"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="默认值"
                android:id="@+id/pop_text"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20.00"
                android:textColor="@color/red"
                android:id="@+id/pop_price"></TextView>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/style"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="M"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="L"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:textColor="@color/red"
            android:text="XL"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_gravity="center"
            android:text="@string/quantity"></TextView>

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:id="@+id/pop_sub"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@drawable/goods_sub_btn"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_gravity="center"
            android:id="@+id/pop_num"></TextView>

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:id="@+id/pop_add"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@drawable/goods_add_btn"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_height="@dimen/dp_50">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:gravity="center"
            android:id="@+id/pop_cancel"
            android:textColor="@color/black"
            android:background="@color/gray"></TextView>

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:gravity="center"
            android:id="@+id/pop_confirm"
            android:textColor="@color/white"
            android:background="@drawable/button_false"></TextView>

    </LinearLayout>

</LinearLayout>